tests/ui/traits/next-solver/assembly/runaway-impl-candidate-selection.stderr
error[E0283]: type annotations needed
  --> $DIR/runaway-impl-candidate-selection.rs:13:22
   |
LL |     println!("{:?}", iter::<_>());
   |               ----   ^^^^^^^^^^^ cannot infer type
   |               |
   |               required by a bound introduced by this call
   |
   = note: cannot satisfy `_: Iterator`
note: required by a bound in `iter`
  --> $DIR/runaway-impl-candidate-selection.rs:8:12
   |
LL | fn iter<T: Iterator>() -> <T as Iterator>::Item {
   |            ^^^^^^^^ required by this bound in `iter`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
